<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unofficial FunCheapSF</string>
    <string name="API_KEY">AIzaSyDH-_Y43VqpxHNDP7aPK_LCf9higNZk6bo</string>

    <!-- For Error Messages -->
    <string name="network_error">No network connection available.</string>
    <string name="try_again">TRY AGAIN</string>

    <string name="data_error">Error retrieving data.</string>
    <string name="notify_me">NOTIFY ME</string>

    <string name="no_events_listed">No events listed for this day.</string>

    <!-- Child Buttons -->
    <string name="details">DETAILS</string>
    <string name="map">MAP</string>

    <!-- Action Menu Strings -->
    <string name="action_settings">Settings</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_pick_a_date">Pick a Date</string>
    <string name="action_today">Today</string>
    <string name="action_tomorrow">Tomorrow</string>
    <string name="action_time">Time</string>
    <string name="action_no_filter">No Filter</string>
    <string name="action_all_day">All Day</string>
    <string name="action_morning">Morning</string>
    <string name="action_afternoon">Afternoon</string>
    <string name="action_evening">Evening</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <!-- Title Bar Day Strings -->
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>

    <!-- For Notify Me Button-->
    <string name="email_message">Please don\'t remove the error msg above this sentence.</string>
    <string name="email_error">Email application could not be found.</string>

    <!-- For Simple Date Formatters-->
    <string name="MMMdd">MMM dd</string>
    <string name="MMMddyyyy">MMM dd, yyyy</string>

    <!-- Simple Date Formatter for database table-->
    <string name="yyyyMMdd">yyyyMMdd</string>
</resources>
